--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "redux": "^4.0.5",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1",
+    "styled-reset": "^4.3.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
