--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "html-react-parser": "^1.2.4",
     "http-proxy-middleware": "^1.0.6",
+    "immer": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-quill": "^1.3.5",
