--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "html-react-parser": "^1.2.4",
-    "http-proxy-middleware": "^1.0.6",
     "immer": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -50,5 +49,6 @@
   "devDependencies": {
     "eslint": "^7.18.0",
     "eslint-plugin-react": "^7.22.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
