--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "start": "node -r esm src",
     "start:dev": "nodemon --watch src/ -r esm src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run start\" \"npm run start --prefix ../frontend\""
+    "dev": "concurrently \"npm run start\" \"npm start --prefix ../frontend\""
   },
   "author": "Redonearth",
   "license": "ISC",
